Upgrading to Wicket 10, Spring 6 and related Jakarta EE specs (#741)
Signed-off-by: Martin Tzvetanov Grigorov <mgrigorov@apache.org>
Co-authored-by: Martin Tzvetanov Grigorov <mgrigorov@apache.org>